# torch_mmap

./: README.md  pyproject.toml  pytest.ini
docs/source/: conf.py  index.rst  modules.rst
tests/: test_mmtt.py
torch_mmap/: __init__.py  mmtt.py
